--- a/style.css
+++ b/style.css
@@ -69,8 +69,13 @@
 }
 .event-btn {
   font-size: 18px;
+  font-weight: bold;
   border-radius: 10px;
   padding: 8px;
+  text-decoration: none;
+  text-align: center;
+  color: black;
+  background-color: gainsboro;
 }
 #active {
   background-color: rgb(255, 4, 4);
@@ -85,21 +90,26 @@
 .live-match {
   box-shadow: 10px 10px 10px rgb(238, 238, 238);
   border-radius: 10px;
+  border: 1px solid rgb(236, 236, 236);
 }
 .match-img img {
   width: 100%;
 }
 .match-text-box {
-  padding: 10px;
+  margin: 5px;
+}
+.match-text-box h2 {
+  font-size: 15px;
 }
 .match-btn {
   border: 1px solid black;
   border-radius: 5px;
   padding: 5px 10px;
+  margin: 5px;
   font-weight: 800;
 }
 .match-icon {
-  padding: 5px;
+  margin: 5px;
 }
 /* footer */
 footer {
@@ -119,10 +129,15 @@ footer {
   color: white;
   padding: 3%;
 }
+.foot-links ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 .foot-links ul li {
   list-style: none;
-  display: inline-block;
-  margin-left: 40px;
+  display: block;
+  margin-left: 30px;
 }
 .foot-links ul li a {
   text-decoration: none;
@@ -136,4 +151,39 @@ footer {
 }
 .fa-brands:hover {
   color: #fb5200;
+}
+/* web-site-2 */
+.matches-chart {
+  width: 75%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px 30px;
+}
+.m-images {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+}
+.match-img-1 img {
+  width: 100%;
+}
+.match-img-2 img {
+  width: 100%;
+}
+.m-images span {
+  font-size: 15px;
+  font-weight: bold;
+  display: block;
+  margin: 20px;
+}
+.match-box {
+  box-shadow: 10px 10px 10px rgb(238, 238, 238);
+  border-radius: 10px;
+  padding: 10px;
+  border: 1px solid rgb(236, 236, 236);
+}
+.match-text-box-2 {
+  text-align: center;
+  font-size: 15px;
 }
