--- a/style.css
+++ b/style.css
@@ -54,8 +54,8 @@
   width: 80%;
   margin: 4% auto;
   display: flex;
-  justify-content: space-between;
   flex-direction: row;
+  justify-content: space-between;
 }
 .match-events {
   display: flex;
@@ -66,6 +66,9 @@
   height: 300px;
   padding: 10px 20px;
   border-radius: 20px;
+}
+.match-events a:hover {
+  color: rgb(250, 0, 0);
 }
 .event-btn {
   font-size: 18px;
@@ -107,6 +110,11 @@
   padding: 5px 10px;
   margin: 5px;
   font-weight: 800;
+}
+.match-btn:hover {
+  background-color: red;
+  color: white;
+  border: 1px solid white;
 }
 .match-icon {
   margin: 5px;
