--- a/style.css
+++ b/style.css
@@ -196,7 +196,10 @@ footer {
   text-align: center;
   font-size: 15px;
 }
-/* web-site-1 */
+/* -----------Media Query------------ */
+
+/* -----web-site-1-----*/
+
 /* Mobile-version */
 @media screen and (max-width: 668px) {
   /* header */
@@ -234,7 +237,7 @@ footer {
     background-color: transparent;
     width: 100%;
     height: 300px;
-    margin: 0 70px;
+    margin: 0 140px;
   }
   .event-btn {
     width: 200px;
