--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@
   font-weight: bold;
   border-radius: 10px;
   padding: 10px 30px;
+  transition: background-color 0.6s;
+}
+.head-btn:hover {
+  background-color: transparent;
+  border: 2px solid rgb(222, 219, 219);
 }
 .fa-greater-than {
   font-size: 12px;
@@ -302,7 +307,7 @@ footer {
     flex-direction: row;
   }
   .head-image {
-    width: 40%;
+    width: 50%;
     margin-left: 15%;
   }
   .head-image img {
@@ -369,6 +374,9 @@ footer {
     justify-content: center;
     align-items: center;
     margin-top: 30px;
+  }
+  .foot-links ul li a {
+    font-size: 13px;
   }
 }
 
